WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12856
REGRESSION (
r13685
): Canceling the suggestion popup does not revert the change
https://bugs.webkit.org/show_bug.cgi?id=12856
Summary
REGRESSION (r13685): Canceling the suggestion popup does not revert the change
mitz
Reported
2007-02-22 10:48:38 PST
In editable HTML (including form controls), if you type a prefix such as "thr" and press F5 to bring up the completions popup, then press Esc to cancel, the chosen completion is not reverted and remains in the text. Moreover, if one of the completions is the empty string (e.g. if the prefix is "the") and you choose a non-empty completion in the popup then choose the empty completion, the last chosen completion isn't erased. This bug was introduced in <
http://trac.webkit.org/projects/webkit/changeset/13685
>.
Attachments
Patch
(2.82 KB, patch)
2007-02-22 10:56 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-22 10:56:45 PST
Created
attachment 13317
[details]
Patch The change affects one editing test in an insignificant way.
Maciej Stachowiak
Comment 2
2007-02-22 19:24:16 PST
Comment on
attachment 13317
[details]
Patch r=me (would be nice to add a manual test)
Sam Weinig
Comment 3
2007-02-23 19:07:27 PST
Landed in
r19837
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug