LayoutTests:

Reviewed by Maciej.

        - updated test result for http://bugs.webkit.org/show_bug.cgi?id=12856
          REGRESSION (r13685): Canceling the suggestion popup does not revert the change

        * editing/deleting/delete-3800834-fix-expected.txt:

WebCore:

        Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12856
          REGRESSION (r13685): Canceling the suggestion popup does not revert the change

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::doApply): If the fragment to be inserted
        is empty, first delete the selection, and only then bail out.



Canonical link: https://commits.webkit.org/16678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19837 268f45cc-cd09-0410-ab3c-d52691b4dbfc